petstore-web/deploy/petstore-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: petstore-web-service
    servicePort: 80
  rules:
  - host: petstore.web.info
    http:
      paths:
      - path: /
        backend:
          serviceName: petstore-web-service
          servicePort: 80
